WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
85122
[EFL][DRT] Editor doesn't cancel composition as change of value
https://bugs.webkit.org/show_bug.cgi?id=85122
Summary
[EFL][DRT] Editor doesn't cancel composition as change of value
Kangil Han
Reported
2012-04-27 20:24:23 PDT
EFL's editor doesn't cancel composition as change of value.
Attachments
Patch
(3.36 KB, patch)
2012-05-08 20:22 PDT
,
Kangil Han
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Kangil Han
Comment 1
2012-05-08 20:22:46 PDT
Created
attachment 140859
[details]
Patch
Kangil Han
Comment 2
2012-05-08 23:38:57 PDT
gyuyoung, rakuco : Could I please get informal review on this patch? Thanks!
Gyuyoung Kim
Comment 3
2012-05-09 22:09:24 PDT
Comment on
attachment 140859
[details]
Patch Looks fine. This patch copies gtk implementation to efl port.
Kangil Han
Comment 4
2012-05-09 23:07:02 PDT
mrobinson : Could you please review this patch? Thanks!
Ryuan Choi
Comment 5
2012-05-10 20:25:24 PDT
Comment on
attachment 140859
[details]
Patch thanks.
WebKit Review Bot
Comment 6
2012-05-10 21:15:17 PDT
Comment on
attachment 140859
[details]
Patch Clearing flags on attachment: 140859 Committed
r116726
: <
http://trac.webkit.org/changeset/116726
>
WebKit Review Bot
Comment 7
2012-05-10 21:15:22 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug