[EFL][DRT] Editor doesn't cancel composition as change of value https://bugs.webkit.org/show_bug.cgi?id=85122

Patch by Kangil Han <kangil.han@samsung.com> on 2012-05-10
Reviewed by Martin Robinson.

IME composition should be cancelled when the value of input element is changed programmatically.
However, EFL port doesn't cancel as change of value.
Therefore, this patch will fix the bug.

Source/WebKit/efl:

* WebCoreSupport/EditorClientEfl.cpp:
(WebCore::EditorClientEfl::respondToChangedSelection):

LayoutTests:

* platform/efl/Skipped:

Canonical link: https://commits.webkit.org/103760@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@116726 268f45cc-cd09-0410-ab3c-d52691b4dbfc