Source/WebKit/efl/WebCoreSupport/EditorClientEfl.cpp
@@ -144,6 +144,15 @@ void EditorClientEfl::respondToChangedSelection(Frame* coreFrame)
 
     Evas_Object* webFrame = EWKPrivate::kitFrame(coreFrame);
     ewk_frame_editor_client_selection_changed(webFrame);
+
+    if (!coreFrame->editor()->hasComposition() || coreFrame->editor()->ignoreCompositionSelectionChange())
+        return;
+
+    unsigned start;
+    unsigned end;
+
+    if (!coreFrame->editor()->getCompositionSelection(start, end))
+        coreFrame->editor()->cancelComposition();
 }
 
 void EditorClientEfl::didEndEditing()
